# workflow

./: LICENSE  README.md  未命名绘图.drawio
haskell-first-principles/: a.txt  haskell-first-principles.cabal  output.txt  stack.yaml  第三章：Defining Types, Streamlining Functions — Real World Haskell 中文版.htm
haskell-first-principles/RW/CH11/: Run.hs
haskell-first-principles/RW/CH13/: buildmap.hs  lookup.hs  passwdmap.hs
haskell-first-principles/RW/CH5/: Main.hi  PrettyStub.hs  PutJSON.hs  SimpleJSON.hi  demo.hs
haskell-first-principles/RW/CH7/: actions.hs  basicio.hs  tempfile.hs
haskell-first-principles/RW/CH8/: ElfMageic.hs  Regexp.hs
haskell-first-principles/RW/CH9/: BetterPredicate.hs  FoldDir.hs
haskell-first-principles/RW/ch04/: InteractWith.hs
haskell-first-principles/haskell-programming-from-first-principles-master/: .gitignore  haskell-programming-from-first-principles.cabal
haskell-first-principles/haskell-programming-from-first-principles-master/src/: Addition.hs  Arith3Broken.hs  Arith4.hs  Chapter1.hs  Chapter10.hs  Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter15.hs  Chapter16.hs  Chapter17.hs  Chapter18.hs  Chapter2.hs  Chapter20.hs  Chapter21.hs  Chapter22.hs  Chapter23.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Chapter9.hs  Cipher.hs  Cipher2.hs  CipherTest.hs  Jammin.hs  Main.hs  PoemLines.hs  ReaderPractice.hs  Sing.hs  WordNumber.hs
haskell-first-principles/src/: Chap16.hs  Client.hs
haskell-first-principles/src/RW/CH10/: PGM.hs
haskell-first-principles/src/RW/CH11/: QC.hs
haskell-first-principles/src/RW/CH13/: passwd-al.hs  passwd.hs
haskell-first-principles/src/RW/CH5/: Do.hi  Main.hs  Simple  SimpleJSON.hs
haskell-first-principles/src/RW/CH6/: TypeClass.hs
haskell-first-principles/src/RW/CH9/: RecursiveContents.hs
haskell-first-principles/src/RW/ch01/: .#WC.hs
haskell-first-principles/src/RW/ch03/: BookStore.hs
haskell-first-principles/src/RW/ch04/: InteractWith.hi
haskell-first-principles/src/realworld/ch01/: WC.hs
haskell-first-principles/第三章：Defining Types, Streamlining Functions — Real World Haskell 中文版_files/: print.css  readthedocs-data.js  readthedocs-dynamic-include.js  theme_extras.js
snipets/: LICENSE  README.md  snipets.cabal  stack.yaml  test.html
snipets/.stack-work/intero/: intero304301Yb.hs  intero30430Cjh.hs  intero30430_fM.hs  intero30430b9a.hs  intero30430c-h.hs  intero30430zPZ.hs  intero340M0D.hs  intero340Ngu.hs  intero340Z-J.hs  intero340aq0.hs  intero340m6n.hs  intero340zEu.hs
snipets/.stack-work/intero/intero30430-Qd/: Lib.hi
snipets/.stack-work/intero/intero30430MqS/: Parser.hi  VCard.hi
snipets/.stack-work/intero/intero30430MxG/: Main.hi
snipets/.stack-work/intero/intero30430NyN/: Parser.hi
snipets/.stack-work/intero/intero30430Ols/: LenseDemo.hi  Parser.hi
snipets/.stack-work/intero/intero30430Osg/: LenseDemo.hi
snipets/.stack-work/intero/intero30430_Rk/: Lib.hi  VCard.hi
snipets/.stack-work/intero/intero30430b2m/: CChapter5.hi  CChapter7.hi  Chapter10.hi  Chapter12.hi  Chapter13.hi  Chapter14_1.hi  Chapter14_2.hi  Chapter3.hi  Chapter4.hi  Chapter5.hi  Chapter6.hi  Chapter7.hi  Chapter8.hi  Chapter9.hi  ChatChapter14_1.hi  CrafChapter10.hi  Parser.hi  PicturesSVG.hi
snipets/.stack-work/intero/intero340Y9C/: Ant.hi  Base.hi  Chapter13.hi  Chapter14_2.hi  Chapter18.hi  Chapter8.hi  Lib.hi  Main.hi  Queues1.hi  Queues2.hi  Queues3.hi  Set.hi  Tree.hi  Types.hi
snipets/src/: Lib.hs
snipets/src/Craft/: Chapter11.hs  Chapter12.hs  Chapter13.hs  Chapter14_1.hs  Chapter3.hs  Chapter4.hs  Chapter5.hs  Chapter6.hs  Chapter7.hs  Chapter8.hs  Pictures.hs  craft.cabal1
snipets/src/Demo/: LenseDemo  LenseDemo.hs
snipets/src/Haxl/: HaxlDemo.hs
snipets/src/RealWordHaskell/Ch15/: MonadPlus.hs  VCard.hs  (+3 more)
snipets/src/craft/: Chapter1.hs
(+124 files in other folders)
