name:                snipets
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Numberartificial/snipets#readme
license:             BSD3
license-file:        LICENSE
author:              Numberartificial
maintainer:          c05118006@vip.qq.com
copyright:           MIT_2.0
category:            web-prod
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


executable snipets-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , snipets
                     , haxl
                     , mtl
                     , QuickCheck >= 2.1 && < 3
                     , old-locale == 1.0.*
                     , time >= 1.1
                     , HUnit == 1.2.*
                     , hxt
                     , hxt-unicode
                     , lens

  default-language:    Haskell2010

test-suite snipets-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snipets
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Numberartificial/snipets
